版本备份/V1.5.0/设定文档/故事线追踪/关系网络.md
# 关系网络 — 故事线追踪

> 本文件记录人物关系图谱。由 S06 自动维护和更新。只记录重要关系。

---

## 核心关系

### 常阳的关系网

| 关系人 | 关系类型 | 建立章节 | 当前状态 | 描述 |
|:---|:---|:---|:---|:---|
| 老族长 | 师徒/被辅佐 | 第1章 | 信任 | 老族长主动让位 |
| 大壮 | 战友/兄弟 | 第2章 | 信赖（生死交托） | 火塘质疑→默认站队→第4章山谷伏击任前敌指挥、冲阵斩将，战将定位坐实，成常阳最锋利一刀 |
| 阿陶 | 学徒/技术核心 | 第3章 | 崇拜+追随 | 第3章制陶触发尤里卡，被常阳定为技术线核心；「哦！我懂了！」式好学 |
| 巴图 | 盟友/兄弟 | 第15章 | 未出场 | 预计从商人到盟友 |
| 老周 | 谋士/内政 | 第46章 | 未出场 | 内政基石 |
| 青史 | 史官/知己 | 第46章 | 未出场 | 文化线核心 |
| 阿雅 | 后宫线/女将 | 第15章 | 未出场 | 慢热感情线 |
| 芽芽 | 情感锚/童真视角 | 第7章 | 信赖（黏人） | 六岁孤女，部落里最不把常阳当首领的人；常阳"为谁而守"的情感锚；黏阿陶、追常阳 |
| 老姜 | 归附首领/潜在盟友 | 第7章 | 来投（非正式归附） | 石部落被蛮族攻破后率30余口投华夏；宁折不弯；带来"骑马黑影往东"情报 |

### 老族长的关系网

| 关系人 | 关系类型 | 建立章节 | 当前状态 | 描述 |
|:---|:---|:---|:---|:---|
| 大壮 | 叔侄 | 前传 | 已建立 | 老族长是大壮的叔叔 |
| 阿陶 | 祖孙 | 前传 | 已建立 | 老族长是阿陶的爷爷 |

### 巴图的关系网

| 关系人 | 关系类型 | 建立章节 | 当前状态 | 描述 |
|:---|:---|:---|:---|:---|
| 阿雅 | 同父异母兄妹 | 第15章 | 未出场 | 表面不认，暗护 |
| 白狼老王 | 父子 | 前传 | 已建立 | 和平派首领 |

### 现实线关系网

| 关系人 | 关系类型 | 建立章节 | 当前状态 | 描述 |
|:---|:---|:---|:---|:---|
| 常阳↔陈雨 | 兄妹 | 前传 | 现实线 | 陈雨追查哥哥失踪 |
| 常阳↔张磊 | 同事/好友 | 前传 | 现实线 | 张磊分析异常 |
| 常阳↔林婉(遗物) | 母子 | 前传 | 现实线 | 旧木盒金属片线索 |

---

## 敌对关系

- 蛮族部落（第2章建立敌对，第4章山谷伏击正式交战，被击退；证实其与神树林遗迹/背后势力相关，F-004强化）
- 炎部落（第17章建立竞争，第22章明确对立）
- 白狼亲战派（第31章建立敌对，第39章覆灭）

---

## 联盟/附属关系

- 暂无（第39章后白狼成为首个附属）

---

## 关系变化记录

- 第0章（初始化）：初始关系建立
- 第2章后：常阳↔大壮 由「未出场」推进至「破冰中」（火塘质疑→默认站队，山谷互补）
- 第3章后：常阳↔阿陶 建立「师徒/技术核心」关系（制陶触发尤里卡）
- 第4章后：常阳↔大壮 由「破冰中」推进至「信赖（生死交托）」，山谷伏击共生死、战将坐实
- 第7章后：芽芽登场（常阳情感锚/童真视角）；芽芽↔阿陶（黏师傅）、芽芽↔老石头（石头爷爷）；老姜率石部落余众来投，华夏↔老姜建立「归附（非正式）」关系；华夏人口47→80

---

*最后更新：第7章完成后（芽芽/老姜登场，华夏人口破80）*
